Decreased the header heading to prevent distortion

--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ a.ant-typography {
 }
 
 .navbar h2 {
-  font-size: 1.8em;
+  font-size: 1.5em;
 }
 
 .navbar img {
